fix(deps): update notify, schemars, and tracing dependencies to latest versions feat(titlebar): enhance Windows title bar drag functionality and improve event handling

--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -66,6 +66,8 @@ smallvec.workspace = true
 smol.workspace = true
 sum-tree.workspace = true
 tracing.workspace = true
+raw-window-handle = "0.6"
+windows = { workspace = true }
 
 enum-iterator = "2.1.0"
 itertools = "0.13.0"
