--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -67,10 +67,9 @@ smol.workspace = true
 sum-tree.workspace = true
 tracing.workspace = true
 raw-window-handle = "0.6"
-windows = { workspace = true }
 
 enum-iterator = "2.1.0"
-itertools = "0.13.0"
+itertools = "0.14.0"
 once_cell = "1.19.0"
 paste = "1"
 regex = "1"
@@ -85,7 +84,7 @@ rust_decimal = { version = "1.37.0", optional = true }
 markdown = { version = "1.0.0", features = ["serde"] }
 
 # HTML Parser
-html5ever = "0.27"
+html5ever = "0.27.0"
 markup5ever_rcdom = "0.3.0"
 
 # Calendar
@@ -94,36 +93,39 @@ chrono = "0.4.38"
 # Code Editor
 aho-corasick = "1.1.3"
 lsp-types.workspace = true
-tree-sitter = "0.25.4"
-tree-sitter-bash = { version = "0.23.3", optional = true }
+tree-sitter = "0.26.3"
+tree-sitter-bash = { version = "0.25.1", optional = true }
 tree-sitter-c = { version = "0.24.1", optional = true }
 tree-sitter-c-sharp = { version = "0.23.1", optional = true }
 tree-sitter-cmake = { version = "0.7.1", optional = true }
 tree-sitter-cpp = { version = "0.23.4", optional = true }
-tree-sitter-css = { version = "0.23.2", optional = true }
+tree-sitter-css = { version = "0.25.0", optional = true }
 tree-sitter-diff = { version = "0.1.0", optional = true }
 tree-sitter-elixir = { version = "0.3", optional = true }
-tree-sitter-embedded-template = { version = "0.23.0", optional = true }
-tree-sitter-go = { version = "0.23.4", optional = true }
+tree-sitter-embedded-template = { version = "0.25.0", optional = true }
+tree-sitter-go = { version = "0.25.0", optional = true }
 tree-sitter-graphql = { version = "0.1.0", optional = true }
 tree-sitter-html = { version = "0.23.2", optional = true }
 tree-sitter-java = { version = "0.23.5", optional = true }
 tree-sitter-javascript = { version = "0.23.1", optional = true }
-tree-sitter-jsdoc = { version = "0.23.2", optional = true }
+tree-sitter-jsdoc = { version = "0.25.0", optional = true }
 tree-sitter-json = "0.24.8"
 tree-sitter-make = { version = "1.1.1", optional = true }
 tree-sitter-md = { version = "0.5.1", optional = true }
-tree-sitter-proto = { version = "0.2.0", optional = true }
-tree-sitter-python = { version = "0.23.6", optional = true }
+tree-sitter-proto = { version = "0.4.0", optional = true }
+tree-sitter-python = { version = "0.25.0", optional = true }
 tree-sitter-ruby = { version = "0.23.1", optional = true }
 tree-sitter-rust = { version = "0.24.0", optional = true }
-tree-sitter-scala = { version = "0.23.4", optional = true }
+tree-sitter-scala = { version = "0.24.0", optional = true }
 tree-sitter-sequel = { version = "0.3.8", optional = true }
 tree-sitter-swift = { version = "0.7.0", optional = true }
 tree-sitter-toml-ng = { version = "0.7.0", optional = true }
 tree-sitter-typescript = { version = "0.23.2", optional = true }
 tree-sitter-yaml = { version = "0.7.1", optional = true }
 tree-sitter-zig = { version = "1.1.2", optional = true }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { workspace = true }
 
 [dev-dependencies]
 gpui = { workspace = true, features = ["test-support"] }
