--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -89,6 +89,10 @@ markup5ever_rcdom = "0.3.0"
 # Calendar
 chrono = "0.4.38"
 
+# Command Palette
+nucleo = "0.5"
+fuzzy-matcher = "0.3"
+
 # Code Editor
 aho-corasick = "1.1.3"
 lsp-types.workspace = true
