--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,11 +67,13 @@ almost_complete_range = "allow"
 arc_with_non_send_sync = "allow"
 borrowed_box = "allow"
 dbg_macro = "deny"
+declare_interior_mutable_const = "deny"
 let_underscore_future = "allow"
 manual_is_multiple_of = "allow"
 map_entry = "allow"
 module_inception = "allow"
 non_canonical_partial_ord_impl = "allow"
+redundant_clone = "deny"
 reversed_empty_ranges = "allow"
 single_range_in_vec_init = "allow"
 style = { level = "allow", priority = -1 }
