--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -69,7 +69,9 @@ tracing.workspace = true
 raw-window-handle = "0.6"
 
 enum-iterator = "2.1.0"
+fuzzy-matcher = "0.3"
 itertools = "0.14.0"
+nucleo = "0.5"
 once_cell = "1.19.0"
 paste = "1"
 regex = "1"
