--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ gpui-component-macros = { path = "crates/macros", version = "0.5.0" }
 gpui-component-assets = { path = "crates/assets", version = "0.5.0" }
 story = { path = "crates/story" }
 
-gpui = { git = "https://github.com/zed-industries/zed", rev = "442c2364025401f81a8a2d45dea4a8f8c123f1e7" }
+gpui = { git = "https://github.com/BumpyClock/zed", rev = "bc9e4f56bf756d8cc9c1f5bb026cd4bfd2e2a421" }
 gpui-macros = "0.2.2"
 sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
 # reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
